tests/bad/func/invalid_return.oc
/// fail: Couldn't find this identifier: Foo

def foo(x: i32): Foo { }